Einige equals müssen angepasst werden